--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-sharp": "^1.6.48",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-sharp": "^1.6.27",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
