--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-sharp": "^1.6.27",
-    "react-helmet": "^5.2.0"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
+    "react-scroll": "^1.7.9",
+    "react-spring": "^5.3.17",
+    "styled-components": "^3.3.3",
+    "webpack": "^1.15.0"
   },
   "keywords": [
     "gatsby"
